// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test Footer should render correctly 1`] = `
<div>
  <div
    class="footer class"
  >
    Footer
  </div>
</div>
`;

exports[`test Footer should render correctly 2`] = `
<div>
  <div
    class="footer desktop mobile windows class class2"
  >
    Footer
  </div>
</div>
`;
